--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   firebase_core: ^2.13.0
   kpostal: ^0.5.1
   remedi_kopo: ^0.0.2
+  cloud_firestore: ^4.7.1
+  firebase_auth: ^4.6.1
+  firebase_storage: ^11.2.1
+  provider: ^6.0.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
