--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_storage: ^11.2.1
   provider: ^6.0.5
   intl: ^0.17.0
+  google_sign_in: ^6.1.2
 
 dev_dependencies:
   flutter_test:
