--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -21,6 +21,10 @@
 		<string>마이크 사용에 필요합니다.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>사진라이브러리 사용에 필요합니다.</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>The app needs location permission</string>
+		<key>io.flutter.embedded_views_preview</key>
+		<string>YES</string>
 		<key>NSAppTransportSecurity</key>
 		<dict>
 			<key>NSAllowsArbitraryLoads</key>
