--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.17.0
   google_sign_in: ^6.1.2
+  google_maps_flutter: ^2.2.8
 
 dev_dependencies:
   flutter_test:
