--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   intl: ^0.17.0
   google_sign_in: ^6.1.2
   google_maps_flutter: ^2.2.8
+  lottie: ^2.4.0
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
