--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_maps_flutter: ^2.2.8
   lottie: ^2.4.0
   table_calendar: ^3.0.8
+  flutter_local_notifications: ^14.1.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
