--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   table_calendar: ^3.0.8
   flutter_local_notifications: ^14.1.1
   http: ^0.13.6
+  google_mlkit_image_labeling: ^0.7.0
 
 dev_dependencies:
   flutter_test:
